# blue

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: pull_request.yml
docs/: .gitignore  README.md
docs/docs/: index.md
docs/docs/.vitepress/: config.mts
docs/docs/.vitepress/theme/: custom.css
docs/docs/cli/: index.md
docs/docs/config/: data-sources.md  encryption.md  index.md  parameters.md  providers.md  resources.md  state.md  templates.md
docs/docs/providers/: index.md
docs/docs/providers/blue/: index.md  script-data-source.md  script-resource.md
docs/docs/providers/upcloud/: index.md
docs/scripts/: gen-docs.mjs
src/: config.rs  deploy.rs  diff.rs  graph.rs  main.rs  plan.rs  provider.rs  reference.rs  refresh.rs  schema.rs  schema_test.rs  state.rs  template.rs  types.rs
src/cmd/: deploy.rs  destroy.rs  mod.rs  plan.rs  refresh.rs  rekey.rs  validate.rs
src/hooks/: console.js  mod.rs  runtime.rs  test_hook.js
src/providers/: mod.rs
src/providers/blue/: mod.rs  runtime.rs
src/providers/blue/schemas/: blue_script_data_source.toml  blue_script_resource.toml
src/providers/upcloud/: client.rs  managed_object_storage.rs  managed_object_storage_bucket.rs  managed_object_storage_resource.rs  managed_object_storage_service.rs  managed_object_storage_user.rs  managed_object_storage_user_access_key.rs  mod.rs  server.rs  storage.rs  storage_data_source.rs  storage_resource.rs
src/providers/upcloud/schemas/: managed_object_storage_bucket.toml  managed_object_storage_regions.toml  managed_object_storage_service.toml  (+10 more)
