[package]
name = "blue"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde_json = "1"
deno_core = "0.395.0"
tokio = { version = "1", features = ["time", "rt-multi-thread"] }
petgraph = "0.8.3"
age = { version = "0.11", features = ["armor"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
