[package]
name = "blue"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
uuid = { version = "1", features = ["v4"] }
petgraph = "0.8"
clap = { version = "4", features = ["derive"] }
deno_core = "0.398.0"
tokio = { version = "1", features = ["rt", "time"] }
ureq = { version = "3", features = ["json"] }
base64 = "0.22"
